--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock, Paper, Scissors game</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="container">
+      <button class="rock">🗿</button>
+      <button class="paper">🧻</button>
+      <button class="scissors">✂️</button>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
