added visual result of the play

--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
   </head>
   <body>
     <div class="container">
-      <button class="rock">🗿</button>
-      <button class="paper">🧻</button>
-      <button class="scissors">✂️</button>
+      <div class="choise">Here will be shown your and computer's pick</div>
+      <div class="result">Result</div>
+      <div class="btn-wrapper">
+        <button class="rock">🗿</button>
+        <button class="paper">🧻</button>
+        <button class="scissors">✂️</button>
+      </div>
     </div>
-
     <script src="script.js"></script>
   </body>
 </html>
