added final result if someone's score equal to five

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <div class="container">
+      <div class="total-result"></div>
+      <div class="current-score">👧0 - 0🤖</div>
       <div class="choise">Here will be shown your and computer's pick</div>
       <div class="result">Result</div>
       <div class="btn-wrapper">
